<resources>
    <!--    main_activity-->
    <string name="app_bar_search_description">Search recipes</string>
    <string name="app_bar_search_title">Search</string>
    <string name="exit_message">Press back again to exit</string>
    <string name="recently_viewed_label_title">Pull me up</string>
    <string name="recently_viewed_label_title_expanded">Viewed</string>
    <string name="recently_viewed_fab_description">Press to show recently viewed window label</string>

    <!--    dish_alarm_item-->
    <string name="alarm_icon">Alarm icon</string>

    <!--    dish_item-->
    <string name="dish_image">Dish image</string>
    <string name="dish_icon_healthy">Healthy</string>
    <string name="dish_icon_popular">Popular</string>
    <string name="dish_icon_likes">Likes</string>
    <string name="dish_icon_cooking_time_description">Icon cooking time</string>
    <string name="dish_icon_likes_count_description">Icon likes count</string>
    <string name="dish_icon_dish_coast_description">Dish coast</string>

    <!--    recipe_tabs-->
    <string name="tab_name_overview">overview</string>
    <string name="tab_name_ingredients">ingredients</string>
    <string name="tab_name_equipments">equipments</string>
    <string name="tab_name_instructions">instructions</string>
    <string name="tab_name_nutrient">"nutrient"</string>

    <!--    main_menu-->
    <string name="menu_title_home">Home</string>
    <string name="menu_title_profile">Profile</string>
    <string name="menu_title_settings">Settings</string>
    <string name="menu_title_search">Search</string>
    <string name="menu_title_marked">Marked</string>
    <string name="menu_title_dish_reminds">Dish Reminds</string>
    <string name="menu_title_log_out">Log Out</string>

    <!--    fragment_dish_ingredients-->
    <string name="ingredients_servings_count_hint">Enter servings count</string>

    <!--    fragment_dish_overview-->
    <string name="overview_mark_fab_description">Press to marked</string>
    <string name="overview_share_fab_description">Share button</string>
    <string name="time_picker_text">Select time</string>
    <string name="time_picker_text_past_time">The selected time is in the past</string>
    <string name="date_picker_text">Select date</string>
    <string name="share_message">"Check out this recipe I found on the Spoonzilla app: "</string>
    <string name="share_message_source_link">" Source link: "</string>
    <string name="time_cooking_measure">min</string>

    <!--    fragment_advanced_search_settings-->
    <string name="cuisine_switch_description">Cuisine from personal preferences</string>
    <string name="include_cuisine_button_text">Cuisine</string>
    <string name="diet_switch_description">Diet from personal preferences</string>
    <string name="include_diet_button_text">Diet</string>
    <string name="time_cook_text">Max cooking time in minutes</string>
    <string name="intolerances_switch_description">Intolerances from personal preferences</string>
    <string name="include_intolerances_button_text">Intolerances</string>
    <string name="meal_type_switch_description">Meal types from personal preferences</string>
    <string name="include_meal_type_button_text">Meal types</string>
    <string name="instructions_switch_description">Recipes must have instructions</string>
    <string name="advanced_search_hint">Search query</string>
    <string name="marked_search_hint">Marked search</string>
    <string name="advanced_search_button">Search</string>

    <!--    fragment_home-->
    <string name="home_search_empty_message">No match</string>

    <!--    fragment_profile-->
    <string name="profile_create_new_text">Create new</string>
    <string name="profile_sign_sign_in">Sign in</string>
    <string name="profile_sign_sign_out">Sign out</string>
    <string name="profile_avatar_description">Profile avatar</string>

    <!--    fragment_settings-->
    <string name="settings_title_personal_preferences">Personal preferences</string>
    <string name="settings_title_metric">Metric system</string>
    <string name="settings_title_appearance">Appearance</string>
    <string name="settings_title_night_mode">Night mode</string>
    <string name="settings_title_diets">Choose your diets</string>
    <string name="settings_title_cuisine">Choose a cuisines</string>
    <string name="settings_title_meal_types">Select meal types</string>
    <string name="settings_title_intolerances">Choose an intolerances</string>
    <string name="settings_profile_preferences_switch_description">Use profile preferences on home screen</string>


    <!--    dialog_cuisine-->
    <string name="cuisine_african">African</string>
    <string name="cuisine_american">American</string>
    <string name="cuisine_british">British</string>
    <string name="cuisine_cajun">Cajun</string>
    <string name="cuisine_caribbean">Caribbean</string>
    <string name="cuisine_chinese">Chinese</string>
    <string name="cuisine_eastern_european">Eastern European</string>
    <string name="cuisine_european">European</string>
    <string name="cuisine_french">French</string>
    <string name="cuisine_german">German</string>
    <string name="cuisine_greek">Greek</string>
    <string name="cuisine_indian">Indian</string>
    <string name="cuisine_irish">Irish</string>
    <string name="cuisine_italian">Italian</string>
    <string name="cuisine_japanese">Japanese</string>
    <string name="cuisine_jewish">Jewish</string>
    <string name="cuisine_korean">Korean</string>
    <string name="cuisine_latin_american">Latin American</string>
    <string name="cuisine_mediterranean">Mediterranean</string>
    <string name="cuisine_mexican">Mexican</string>
    <string name="cuisine_middle_eastern">Middle Eastern</string>
    <string name="cuisine_nordic">Nordic</string>
    <string name="cuisine_southern">Southern</string>
    <string name="cuisine_spanish">Spanish</string>
    <string name="cuisine_thai">Thai</string>
    <string name="cuisine_vietnamese">Vietnamese</string>

    <!--    dialog_meal_types-->
    <string name="meal_type_main_course">Main course</string>
    <string name="meal_type_side_dish">Side dish</string>
    <string name="meal_type_dessert">Dessert</string>
    <string name="meal_type_appetizer">Appetizer</string>
    <string name="meal_type_salad">Salad</string>
    <string name="meal_type_bread">Bread</string>
    <string name="meal_type_breakfast">Breakfast</string>
    <string name="meal_type_soup">Soup</string>
    <string name="meal_type_beverage">Beverage</string>
    <string name="meal_type_sauce">Sauce</string>
    <string name="meal_type_marinade">Marinade</string>
    <string name="meal_type_fingerfood">Fingerfood</string>
    <string name="meal_type_snack">Snack</string>
    <string name="meal_type_drink">Drink</string>

    <!--    dialog_intolerances-->
    <string name="intolerance_dairy">Dairy</string>
    <string name="intolerance_egg">Egg</string>
    <string name="intolerance_gluten">Gluten</string>
    <string name="intolerance_grain">Grain</string>
    <string name="intolerance_peanut">Peanut</string>
    <string name="intolerance_seafood">Seafood</string>
    <string name="intolerance_sesame">Sesame</string>
    <string name="intolerance_shellfish">Shellfish</string>
    <string name="intolerance_soy">Soy</string>
    <string name="intolerance_sulfite">Sulfite</string>
    <string name="intolerance_tree_nut">Tree Nut</string>
    <string name="intolerance_wheat">Wheat</string>

    <!--    dialog_diets-->
    <string name="diet_gluten_free">Gluten Free</string>
    <string name="diet_ketogenic">Ketogenic</string>
    <string name="diet_vegetarian">Vegetarian</string>
    <string name="diet_lacto_vegetarian">Lacto-Vegetarian</string>
    <string name="diet_ovo_vegetarian">Ovo-Vegetarian</string>
    <string name="diet_vegan">Vegan</string>
    <string name="diet_pescetarian">Pescetarian</string>
    <string name="diet_paleo">Paleo</string>
    <string name="diet_primal">Primal</string>
    <string name="diet_low_fodmap">Low FODMAP</string>
    <string name="diet_whole30">Whole30</string>

    <!--    night_mode-->
    <string name="mode_night_no">No</string>
    <string name="mode_night_yes">Yes</string>
    <string name="mode_night_system_follow">System follow</string>
    <string name="mode_night_auto_battery">Auto battery</string>
    <string name="home_page_content_popular">Popular</string>
    <string name="home_page_content_random">Random</string>

    <!--    Common-->
    <string name="app_name" translatable="false">Spoonzilla</string>
    <string name="home_search_hint">Quick search</string>
    <string name="anonymous">Anonymous</string>
    <string name="search_hint">Search</string>
    <string name="fragment_home">Home</string>
    <string name="fragment_profile">Profile</string>
    <string name="fragment_marked">Marked</string>
    <string name="fragment_dish_reminds">Dish reminds</string>
    <string name="fragment_settings">Settings</string>
    <string name="fragment_advanced_search">Search</string>
    <string name="fragment_advanced_search_settings">Search settings</string>
    <string name="fragment_details">Dish details</string>
    <string name="fragment_recipe_ingredients">Ingredients</string>
    <string name="fragment_recipe_instructions">Instructions</string>
    <string name="fragment_recipe_nutrient">Nutrient</string>
    <string name="fragment_recipe_overview">Overview</string>
    <string name="fragment_similar_recipes">Similar</string>
    <string name="dish_reminder_title">Eat me!</string>
    <string name="dish_reminder_text">"Don't forget to cook "</string>
    <string name="dish_reminder_cancel_action_button">Cancel</string>

</resources>