<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_dialog_diets"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="@dimen/dialog_padding_start"
    android:paddingTop="@dimen/dialog_padding_top"
    android:paddingEnd="@dimen/dialog_padding_end"
    android:paddingBottom="@dimen/dialog_padding_bottom">

    <CheckBox
        android:id="@+id/checkbox_diet_gluten_free"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diet_gluten_free" />

    <CheckBox
        android:id="@+id/checkbox_diet_ketogenic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diet_ketogenic" />

    <CheckBox
        android:id="@+id/checkbox_diet_vegetarian"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diet_vegetarian" />

    <CheckBox
        android:id="@+id/checkbox_diet_lacto_vegetari"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diet_lacto_vegetarian" />

    <CheckBox
        android:id="@+id/checkbox_diet_ovo_vegetarian"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diet_ovo_vegetarian" />

    <CheckBox
        android:id="@+id/checkbox_diet_vegan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diet_vegan" />

    <CheckBox
        android:id="@+id/checkbox_diet_pescetarian"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diet_pescetarian" />

    <CheckBox
        android:id="@+id/checkbox_diet_paleo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diet_paleo" />

    <CheckBox
        android:id="@+id/checkbox_diet_primal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diet_primal" />

    <CheckBox
        android:id="@+id/checkbox_diet_low_fodmap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diet_low_fodmap" />

</LinearLayout>
