<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@id/homeFragment"
        android:checkable="true"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_title_home" />

    <item
        android:id="@id/profileFragment"
        android:checkable="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/menu_title_profile" />

    <item
        android:id="@id/settingsFragment"
        android:checkable="true"
        android:icon="@drawable/ic_settings"
        android:title="@string/menu_title_settings" />

    <group
        android:id="@id/functional">
        <item
            android:id="@id/logOutMenu"
            android:icon="@drawable/ic_clear"
            android:checkable="false"
            android:title="@string/menu_title_log_out" />
    </group>

</menu>