<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.fragment.SettingsFragment">

    <Spinner
        android:id="@+id/settings_theme_spinner"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="@dimen/settings_menu_item_height" />

    <TextView
        android:id="@+id/settings_diets"
        android:text="@string/settings_title_diets"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_menu_item_height"/>

    <TextView
        android:id="@+id/settings_meal_types"
        android:text="@string/settings_title_meal_types"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="@dimen/settings_menu_item_height"/>

    <TextView
        android:id="@+id/settings_intolerances"
        android:text="@string/settings_title_intolerances"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_menu_item_height"/>

    <TextView
        android:id="@+id/settings_cuisine"
        android:text="@string/settings_title_cuisine"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_menu_item_height"/>

</LinearLayout>