<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_dish_item_advanced"
    android:layout_width="match_parent"
    android:layout_height="@dimen/root_dish_item_advanced_height">

    <ImageView
        android:id="@+id/dish_item_advanced_image"
        android:layout_width="@dimen/image_dish_item_image_advanced_info"
        android:layout_height="@dimen/image_dish_item_image_advanced_info"
        android:background="@color/app_color_2"
        android:contentDescription="@string/dish_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/ic_food" />

    <TextView
        android:id="@+id/dish_item_advanced_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="3"
        android:padding="@dimen/dish_name_padding"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/dish_item_advanced_image"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/dish_item_advanced_likes"
        android:layout_width="@dimen/image_dish_item_icon_size"
        android:layout_height="@dimen/image_dish_item_icon_size"
        android:contentDescription="@string/dish_icon_likes"
        android:src="@drawable/ic_thumb_up"
        app:layout_constraintBottom_toTopOf="@id/dish_item_advanced_likes_text"
        app:layout_constraintEnd_toStartOf="@id/dish_item_advanced_healthy"
        app:layout_constraintStart_toEndOf="@id/dish_item_advanced_image" />

    <TextView
        android:id="@+id/dish_item_advanced_likes_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/dish_item_advanced_likes"
        app:layout_constraintStart_toStartOf="@id/dish_item_advanced_likes" />

    <ImageView
        android:id="@+id/dish_item_advanced_healthy"
        android:layout_width="@dimen/image_dish_item_icon_size"
        android:layout_height="@dimen/image_dish_item_icon_size"
        android:contentDescription="@string/dish_icon_healthy"
        android:src="@drawable/ic_healthy"
        app:layout_constraintBottom_toTopOf="@id/dish_item_advanced_healthy_text"
        app:layout_constraintEnd_toStartOf="@id/dish_item_advanced_popular"
        app:layout_constraintStart_toEndOf="@id/dish_item_advanced_likes" />

    <TextView
        android:id="@+id/dish_item_advanced_healthy_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dish_icon_healthy"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/dish_item_advanced_healthy"
        app:layout_constraintStart_toStartOf="@id/dish_item_advanced_healthy" />

    <ImageView
        android:id="@+id/dish_item_advanced_popular"
        android:layout_width="@dimen/image_dish_item_icon_size"
        android:layout_height="@dimen/image_dish_item_icon_size"
        android:contentDescription="@string/dish_icon_popular"
        android:src="@drawable/ic_popular"
        app:layout_constraintBottom_toTopOf="@id/dish_item_advanced_popular_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/dish_item_advanced_healthy" />

    <TextView
        android:id="@+id/dish_item_advanced_popular_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dish_icon_popular"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/dish_item_advanced_popular"
        app:layout_constraintStart_toStartOf="@id/dish_item_advanced_popular" />

</androidx.constraintlayout.widget.ConstraintLayout>